Edited citation (smrswgy)

--- a/content/publication/smrswgy/cite.bib
+++ b/content/publication/smrswgy/cite.bib
@@ -3,5 +3,6 @@
  author = {Sardana, S.* and Mandavia, A.* and Rasouly, H. and Sabatello, M. and Wong, L. and Grivel1, M. and Yang, L. H.},
  booktitle = {Poster presented at the 4th Ethical, Legal, and Social Implications (ELSI) Congress},
  note = {* Shared first authorship},
- title = {Race, Ethnicity, and Genetic Diversity: The Challenges for Precision Medicine Research}
+ title = {Race, Ethnicity, and Genetic Diversity: The Challenges for Precision Medicine Research},
+ year = {2017},
 }
