--- a/publications.bib
+++ b/publications.bib
@@ -466,9 +466,9 @@ year = {under review},
 }
 
 @article{mbshhasrsdmsml,
-author = {Mandavia, A. and Banducci, A. N. and Simpson, T. L. and Hawn, S. and Hyde, J. and Ameral, V. E. and Sistad, R. E. and Roth, C. E. and Sar-pong, A. A. and Davenport, M. and Meng, F. and Stein, M. D. and Marx, B. P. and Livingston, N. A.},
+author = {Mandavia, A. and Banducci, A. N. and Simpson, T. L. and Marx, B. P. and Hawn, S. and Hyde, J. and Ameral, V. E. and Sistad, R. E. and Roth, C. E. and Sar-pong, A. A. and Davenport, M. and Meng, F. and Stein, M. D. and Livingston, N. A.},
 journal = {under review},
-title = {A disproportionate burden: suicide, alcohol-and opioid-attributable deaths among veteran men and women},
+title = {Suicide death, lethal means, and years of potential life lost of among veteran men and women with substance use disorder.},
 }
 
 @phdthesis{m22,
@@ -761,6 +761,34 @@ title = {Let’s Talk About Sex},
 year = {2015},
 }
 
+@inproceedings{mbshhasrsdmsml,
+address = {},
+author = {Richardson, E. and Mandavia, A. D. and Hyde, J. and Roth, C. and Davenport, M. and Jones, K. and Meng, F. and Kim, B. and Livingston, N.},
+booktitle = {},
+month = {Under Review},
+title = {Gender and racial differences in buprenorphine initiation and duration among a national cohort of Veterans be-tween 2016 and 2023},
+year = {2024},
+}
+
+@inproceedings{mbshhasrsdmsml,
+address = {Boston, MA},
+author = {Mandavia, A. D. and Banducci, A. N. and Simpson, T. L. and Hawn, S. and Hyde, J. and Ameral, V. E. and Sistad, R. E.  and Roth, C. and Sarpong, A. A. and Davenport, M. and Meng, F. and Stein, M.D. and Marx, B. P. and Livingston, N.},
+booktitle = {Poster to be presented at the 2024 Anxiety and Depression Association of America Annual Meeting},
+month = {April},
+note = {*Nominated for Poster Award},
+title = {Disproportionate risk of suicide, opioid overdose, and alcohol-attributable death among veteran women compared to men*},
+year = {2024},
+}
+
+@inproceedings{rmbmdl,
+address = {Boston, MA},
+author = {Roth, C. and Mandavia, A. D. and Bovin, M.J and Mahoney, C. and Banducci, A. N. and Livingston, N.},
+booktitle = {Poster to be presented at the 2024 Anxiety and Depression Association of America Annual Meeting},
+month = {April},
+title = {Prevalence and Risk Associated with Military Sexual Trauma in a Sample of Veterans with Substance Use Disorder},
+year = {2024},
+}
+
 
 @inproceedings{bmmdsrmwl,
 address = {Los Angeles, CA},
@@ -985,6 +1013,7 @@ author = {Sardana, S.* and Mandavia, A.* and Rasouly, H. and Sabatello, M. and W
 booktitle = {Poster presented at the 4th Ethical, Legal, and Social Implications (ELSI) Congress},
 note = {* Shared first authorship},
 title = {Race, Ethnicity, and Genetic Diversity: The Challenges for Precision Medicine Research},
+year = {2017},
 }
 
 @inproceedings{wmr,
